[gd_scene load_steps=11 format=4 uid="uid://pdw843hvb53"]

[ext_resource type="Script" path="res://scenes/Ui/MapSelectScreen/modifier_selection_menu.gd" id="1_ea0s7"]
[ext_resource type="TileSet" uid="uid://de0f0aogjq64q" path="res://resources/tilesets/tileset.tres" id="2_3jufc"]
[ext_resource type="PackedScene" uid="uid://bsr284cx0o2lt" path="res://scenes/Ui/vignette.tscn" id="3_63nyo"]
[ext_resource type="Theme" uid="uid://bmh7oa1jgdg2c" path="res://resources/theme/theme.tres" id="4_ijeid"]
[ext_resource type="PackedScene" uid="uid://c7dkmsuxsqych" path="res://scenes/Ui/MapSelectScreen/modifier_card.tscn" id="6_otpye"]
[ext_resource type="Shader" path="res://resources/shaders/glowing_border.gdshader" id="7_gqc22"]
[ext_resource type="PackedScene" uid="uid://pg6jic4xnaw1" path="res://scenes/Ui/sound_button.tscn" id="8_b8h6c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3mnt"]
resource_local_to_scene = true
shader = ExtResource("7_gqc22")
shader_parameter/color1 = Color(0.639, 0.361, 0.865, 1)
shader_parameter/color2 = Color(0.549, 0.204, 0.792, 1)
shader_parameter/width = 0.28
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(2, 2)
shader_parameter/time = null
shader_parameter/glow_speed = 1.0
shader_parameter/intensity = 1.5
shader_parameter/edge_softness = 1.0
shader_parameter/glow_is_active = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hhhj0"]
resource_local_to_scene = true
shader = ExtResource("7_gqc22")
shader_parameter/color1 = Color(0.639, 0.361, 0.865, 1)
shader_parameter/color2 = Color(0.549, 0.204, 0.792, 1)
shader_parameter/width = 0.28
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(2, 2)
shader_parameter/time = null
shader_parameter/glow_speed = 1.0
shader_parameter/intensity = 1.5
shader_parameter/edge_softness = 1.0
shader_parameter/glow_is_active = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6a7dy"]
resource_local_to_scene = true
shader = ExtResource("7_gqc22")
shader_parameter/color1 = Color(0.639, 0.361, 0.865, 1)
shader_parameter/color2 = Color(0.549, 0.204, 0.792, 1)
shader_parameter/width = 0.28
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(2, 2)
shader_parameter/time = null
shader_parameter/glow_speed = 1.0
shader_parameter/intensity = 1.5
shader_parameter/edge_softness = 1.0
shader_parameter/glow_is_active = true

[node name="ModifierSelectionMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ea0s7")

[node name="TileMapBackground2" type="TileMapLayer" parent="."]
top_level = true
tile_map_data = PackedByteArray("AAD/////AgAGAAEAAAD//wAAAgAGAAEAAAD//wEAAgAGAAEAAAD//wIAAgAGAAEAAAD//wMAAgAGAAEAAAD//wQAAgAGAAEAAAD//wUAAgAGAAEAAAD//wYAAgAGAAEAAAD//wcAAgAGAAEAAAD//wgAAgAGAAEAAAD//wkAAgAGAAEAAAD//woAAgAGAAEAAAD//wsAAgAGAAEAAAD//wwAAgAGAAEAAAD//w0AAgAGAAEAAAD//w4AAgAGAAEAAAD//w8AAgAGAAEAAAD//xAAAgAGAAEAAAD//xEAAgAGAAEAAAD//xIAAgAGAAEAAAD//xMAAgAGAAEAAAD//xQAAgAGAAEAAAD//xUAAgAGAAEAAAD//xYAAgAGAAEAAAAAAP//AgAGAAEAAAAAAAAAAgAGAAEAAAAAAAEAAgAGAAEAAAAAAAIAAgAGAAEAAAAAAAMAAgAGAAEAAAAAAAQAAgAGAAEAAAAAAAUAAgAGAAEAAAAAAAYAAgAGAAEAAAAAAAcAAgAGAAEAAAAAAAgAAgAGAAEAAAAAAAkAAgAGAAEAAAAAAAoAAgAGAAEAAAAAAAsAAgAGAAEAAAAAAAwAAgAGAAEAAAAAAA0AAgAGAAEAAAAAAA4AAgAGAAEAAAAAAA8AAgAGAAEAAAAAABAAAgAGAAEAAAAAABEAAgAGAAEAAAAAABIAAgAGAAEAAAAAABMAAgAGAAEAAAAAABQAAgAGAAEAAAAAABUAAgAGAAEAAAAAABYAAgAGAAEAAAABAP//AgAGAAEAAAABAAAAAgAGAAEAAAABAAEAAgAGAAEAAAABAAIAAgAGAAEAAAABAAMAAgAGAAEAAAABAAQAAgAGAAEAAAABAAUAAgAGAAEAAAABAAYAAgAGAAEAAAABAAcAAgAGAAEAAAABAAgAAgAGAAEAAAABAAkAAgAGAAEAAAABAAoAAgAGAAEAAAABAAsAAgAGAAEAAAABAAwAAgAGAAEAAAABAA0AAgAGAAEAAAABAA4AAgAGAAEAAAABAA8AAgAGAAEAAAABABAAAgAGAAEAAAABABEAAgAGAAEAAAABABIAAgAGAAEAAAABABMAAgAGAAEAAAABABQAAgAGAAEAAAABABUAAgAGAAEAAAABABYAAgAGAAEAAAACAP//AgAGAAEAAAACAAAAAgAGAAEAAAACAAEAAgAGAAEAAAACAAIAAgAGAAEAAAACAAMAAgAGAAEAAAACAAQAAgAGAAEAAAACAAUAAgAGAAEAAAACAAYAAgAGAAEAAAACAAcAAgAGAAEAAAACAAgAAgAGAAEAAAACAAkAAgAGAAEAAAACAAoAAgAGAAEAAAACAAsAAgAGAAEAAAACAAwAAgAGAAEAAAACAA0AAgAGAAEAAAACAA4AAgAGAAEAAAACAA8AAgAGAAEAAAACABAAAgAGAAEAAAACABEAAgAGAAEAAAACABIAAgAGAAEAAAACABMAAgAGAAEAAAACABQAAgAGAAEAAAACABUAAgAGAAEAAAACABYAAgAGAAEAAAADAP//AgAGAAEAAAADAAAAAgAGAAEAAAADAAEAAgAGAAEAAAADAAIAAgAGAAEAAAADAAMAAgAGAAEAAAADAAQAAgAGAAEAAAADAAUAAgAGAAEAAAADAAYAAgAGAAEAAAADAAcAAgAGAAEAAAADAAgAAgAGAAEAAAADAAkAAgAGAAEAAAADAAoAAgAGAAEAAAADAAsAAgAGAAEAAAADAAwAAgAGAAEAAAADAA0AAgAGAAEAAAADAA4AAgAGAAEAAAADAA8AAgAGAAEAAAADABAAAgAGAAEAAAADABEAAgAGAAEAAAADABIAAgAGAAEAAAADABMAAgAGAAEAAAADABQAAgAGAAEAAAADABUAAgAGAAEAAAADABYAAgAGAAEAAAAEAP//AgAGAAEAAAAEAAAAAgAGAAEAAAAEAAEAAgAGAAEAAAAEAAIAAgAGAAEAAAAEAAMAAgAGAAEAAAAEAAQAAgAGAAEAAAAEAAUAAgAGAAEAAAAEAAYAAgAGAAEAAAAEAAcAAgAGAAEAAAAEAAgAAgAGAAEAAAAEAAkAAgAGAAEAAAAEAAoAAgAGAAEAAAAEAAsAAgAGAAEAAAAEAAwAAgAGAAEAAAAEAA0AAgAGAAEAAAAEAA4AAgAGAAEAAAAEAA8AAgAGAAEAAAAEABAAAgAGAAEAAAAEABEAAgAGAAEAAAAEABIAAgAGAAEAAAAEABMAAgAGAAEAAAAEABQAAgAGAAEAAAAEABUAAgAGAAEAAAAEABYAAgAGAAEAAAAFAP//AgAGAAEAAAAFAAAAAgAGAAEAAAAFAAEAAgAGAAEAAAAFAAIAAgAGAAEAAAAFAAMAAgAGAAEAAAAFAAQAAgAGAAEAAAAFAAUAAgAGAAEAAAAFAAYAAgAGAAEAAAAFAAcAAgAGAAEAAAAFAAgAAgAGAAEAAAAFAAkAAgAGAAEAAAAFAAoAAgAGAAEAAAAFAAsAAgAGAAEAAAAFAAwAAgAGAAEAAAAFAA0AAgAGAAEAAAAFAA4AAgAGAAEAAAAFAA8AAgAGAAEAAAAFABAAAgAGAAEAAAAFABEAAgAGAAEAAAAFABIAAgAGAAEAAAAFABMAAgAGAAEAAAAFABQAAgAGAAEAAAAFABUAAgAGAAEAAAAFABYAAgAGAAEAAAAGAP//AgAGAAEAAAAGAAAAAgAGAAEAAAAGAAEAAgAGAAEAAAAGAAIAAgAGAAEAAAAGAAMAAgAGAAEAAAAGAAQAAgAGAAEAAAAGAAUAAgAGAAEAAAAGAAYAAgAGAAEAAAAGAAcAAgAGAAEAAAAGAAgAAgAGAAEAAAAGAAkAAgAGAAEAAAAGAAoAAgAGAAEAAAAGAAsAAgAGAAEAAAAGAAwAAgAGAAEAAAAGAA0AAgAGAAEAAAAGAA4AAgAGAAEAAAAGAA8AAgAGAAEAAAAGABAAAgAGAAEAAAAGABEAAgAGAAEAAAAGABIAAgAGAAEAAAAGABMAAgAGAAEAAAAGABQAAgAGAAEAAAAGABUAAgAGAAEAAAAGABYAAgAGAAEAAAAHAP//AgAGAAEAAAAHAAAAAgAGAAEAAAAHAAEAAgAGAAEAAAAHAAIAAgAGAAEAAAAHAAMAAgAGAAEAAAAHAAQAAgAGAAEAAAAHAAUAAgAGAAEAAAAHAAYAAgAGAAEAAAAHAAcAAgAGAAEAAAAHAAgAAgAGAAEAAAAHAAkAAgAGAAEAAAAHAAoAAgAGAAEAAAAHAAsAAgAGAAEAAAAHAAwAAgAGAAEAAAAHAA0AAgAGAAEAAAAHAA4AAgAGAAEAAAAHAA8AAgAGAAEAAAAHABAAAgAGAAEAAAAHABEAAgAGAAEAAAAHABIAAgAGAAEAAAAHABMAAgAGAAEAAAAHABQAAgAGAAEAAAAHABUAAgAGAAEAAAAHABYAAgAGAAEAAAAIAP//AgAGAAEAAAAIAAAAAgAGAAEAAAAIAAEAAgAGAAEAAAAIAAIAAgAGAAEAAAAIAAMAAgAGAAEAAAAIAAQAAgAGAAEAAAAIAAUAAgAGAAEAAAAIAAYAAgAGAAEAAAAIAAcAAgAGAAEAAAAIAAgAAgAGAAEAAAAIAAkAAgAGAAEAAAAIAAoAAgAGAAEAAAAIAAsAAgAGAAEAAAAIAAwAAgAGAAEAAAAIAA0AAgAGAAEAAAAIAA4AAgAGAAEAAAAIAA8AAgAGAAEAAAAIABAAAgAGAAEAAAAIABEAAgAGAAEAAAAIABIAAgAGAAEAAAAIABMAAgAGAAEAAAAIABQAAgAGAAEAAAAIABUAAgAGAAEAAAAIABYAAgAGAAEAAAAJAP//AgAGAAEAAAAJAAAAAgAGAAEAAAAJAAEAAgAGAAEAAAAJAAIAAgAGAAEAAAAJAAMAAgAGAAEAAAAJAAQAAgAGAAEAAAAJAAUAAgAGAAEAAAAJAAYAAgAGAAEAAAAJAAcAAgAGAAEAAAAJAAgAAgAGAAEAAAAJAAkAAgAGAAEAAAAJAAoAAgAGAAEAAAAJAAsAAgAGAAEAAAAJAAwAAgAGAAEAAAAJAA0AAgAGAAEAAAAJAA4AAgAGAAEAAAAJAA8AAgAGAAEAAAAJABAAAgAGAAEAAAAJABEAAgAGAAEAAAAJABIAAgAGAAEAAAAJABMAAgAGAAEAAAAJABQAAgAGAAEAAAAJABUAAgAGAAEAAAAJABYAAgAGAAEAAAAKAP//AgAGAAEAAAAKAAAAAgAGAAEAAAAKAAEAAgAGAAEAAAAKAAIAAgAGAAEAAAAKAAMAAgAGAAEAAAAKAAQAAgAGAAEAAAAKAAUAAgAGAAEAAAAKAAYAAgAGAAEAAAAKAAcAAgAGAAEAAAAKAAgAAgAGAAEAAAAKAAkAAgAGAAEAAAAKAAoAAgAGAAEAAAAKAAsAAgAGAAEAAAAKAAwAAgAGAAEAAAAKAA0AAgAGAAEAAAAKAA4AAgAGAAEAAAAKAA8AAgAGAAEAAAAKABAAAgAGAAEAAAAKABEAAgAGAAEAAAAKABIAAgAGAAEAAAAKABMAAgAGAAEAAAAKABQAAgAGAAEAAAAKABUAAgAGAAEAAAAKABYAAgAGAAEAAAALAP//AgAGAAEAAAALAAAAAgAGAAEAAAALAAEAAgAGAAEAAAALAAIAAgAGAAEAAAALAAMAAgAGAAEAAAALAAQAAgAGAAEAAAALAAUAAgAGAAEAAAALAAYAAgAGAAEAAAALAAcAAgAGAAEAAAALAAgAAgAGAAEAAAALAAkAAgAGAAEAAAALAAoAAgAGAAEAAAALAAsAAgAGAAEAAAALAAwAAgAGAAEAAAALAA0AAgAGAAEAAAALAA4AAgAGAAEAAAALAA8AAgAGAAEAAAALABAAAgAGAAEAAAALABEAAgAGAAEAAAALABIAAgAGAAEAAAALABMAAgAGAAEAAAALABQAAgAGAAEAAAALABUAAgAGAAEAAAALABYAAgAGAAEAAAAMAP//AgAGAAEAAAAMAAAAAgAGAAEAAAAMAAEAAgAGAAEAAAAMAAIAAgAGAAEAAAAMAAMAAgAGAAEAAAAMAAQAAgAGAAEAAAAMAAUAAgAGAAEAAAAMAAYAAgAGAAEAAAAMAAcAAgAGAAEAAAAMAAgAAgAGAAEAAAAMAAkAAgAGAAEAAAAMAAoAAgAGAAEAAAAMAAsAAgAGAAEAAAAMAAwAAgAGAAEAAAAMAA0AAgAGAAEAAAAMAA4AAgAGAAEAAAAMAA8AAgAGAAEAAAAMABAAAgAGAAEAAAAMABEAAgAGAAEAAAAMABIAAgAGAAEAAAAMABMAAgAGAAEAAAAMABQAAgAGAAEAAAAMABUAAgAGAAEAAAAMABYAAgAGAAEAAAANAP//AgAGAAEAAAANAAAAAgAGAAEAAAANAAEAAgAGAAEAAAANAAIAAgAGAAEAAAANAAMAAgAGAAEAAAANAAQAAgAGAAEAAAANAAUAAgAGAAEAAAANAAYAAgAGAAEAAAANAAcAAgAGAAEAAAANAAgAAgAGAAEAAAANAAkAAgAGAAEAAAANAAoAAgAGAAEAAAANAAsAAgAGAAEAAAANAAwAAgAGAAEAAAANAA0AAgAGAAEAAAANAA4AAgAGAAEAAAANAA8AAgAGAAEAAAANABAAAgAGAAEAAAANABEAAgAGAAEAAAANABIAAgAGAAEAAAANABMAAgAGAAEAAAANABQAAgAGAAEAAAANABUAAgAGAAEAAAANABYAAgAGAAEAAAAOAP//AgAGAAEAAAAOAAAAAgAGAAEAAAAOAAEAAgAGAAEAAAAOAAIAAgAGAAEAAAAOAAMAAgAGAAEAAAAOAAQAAgAGAAEAAAAOAAUAAgAGAAEAAAAOAAYAAgAGAAEAAAAOAAcAAgAGAAEAAAAOAAgAAgAGAAEAAAAOAAkAAgAGAAEAAAAOAAoAAgAGAAEAAAAOAAsAAgAGAAEAAAAOAAwAAgAGAAEAAAAOAA0AAgAGAAEAAAAOAA4AAgAGAAEAAAAOAA8AAgAGAAEAAAAOABAAAgAGAAEAAAAOABEAAgAGAAEAAAAOABIAAgAGAAEAAAAOABMAAgAGAAEAAAAOABQAAgAGAAEAAAAOABUAAgAGAAEAAAAOABYAAgAGAAEAAAAPAP//AgAGAAEAAAAPAAAAAgAGAAEAAAAPAAEAAgAGAAEAAAAPAAIAAgAGAAEAAAAPAAMAAgAGAAEAAAAPAAQAAgAGAAEAAAAPAAUAAgAGAAEAAAAPAAYAAgAGAAEAAAAPAAcAAgAGAAEAAAAPAAgAAgAGAAEAAAAPAAkAAgAGAAEAAAAPAAoAAgAGAAEAAAAPAAsAAgAGAAEAAAAPAAwAAgAGAAEAAAAPAA0AAgAGAAEAAAAPAA4AAgAGAAEAAAAPAA8AAgAGAAEAAAAPABAAAgAGAAEAAAAPABEAAgAGAAEAAAAPABIAAgAGAAEAAAAPABMAAgAGAAEAAAAPABQAAgAGAAEAAAAPABUAAgAGAAEAAAAPABYAAgAGAAEAAAAQAP//AgAGAAEAAAAQAAAAAgAGAAEAAAAQAAEAAgAGAAEAAAAQAAIAAgAGAAEAAAAQAAMAAgAGAAEAAAAQAAQAAgAGAAEAAAAQAAUAAgAGAAEAAAAQAAYAAgAGAAEAAAAQAAcAAgAGAAEAAAAQAAgAAgAGAAEAAAAQAAkAAgAGAAEAAAAQAAoAAgAGAAEAAAAQAAsAAgAGAAEAAAAQAAwAAgAGAAEAAAAQAA0AAgAGAAEAAAAQAA4AAgAGAAEAAAAQAA8AAgAGAAEAAAAQABAAAgAGAAEAAAAQABEAAgAGAAEAAAAQABIAAgAGAAEAAAAQABMAAgAGAAEAAAAQABQAAgAGAAEAAAAQABUAAgAGAAEAAAAQABYAAgAGAAEAAAARAP//AgAGAAEAAAARAAAAAgAGAAEAAAARAAEAAgAGAAEAAAARAAIAAgAGAAEAAAARAAMAAgAGAAEAAAARAAQAAgAGAAEAAAARAAUAAgAGAAEAAAARAAYAAgAGAAEAAAARAAcAAgAGAAEAAAARAAgAAgAGAAEAAAARAAkAAgAGAAEAAAARAAoAAgAGAAEAAAARAAsAAgAGAAEAAAARAAwAAgAGAAEAAAARAA0AAgAGAAEAAAARAA4AAgAGAAEAAAARAA8AAgAGAAEAAAARABAAAgAGAAEAAAARABEAAgAGAAEAAAARABIAAgAGAAEAAAARABMAAgAGAAEAAAARABQAAgAGAAEAAAARABUAAgAGAAEAAAARABYAAgAGAAEAAAASAP//AgAGAAEAAAASAAAAAgAGAAEAAAASAAEAAgAGAAEAAAASAAIAAgAGAAEAAAASAAMAAgAGAAEAAAASAAQAAgAGAAEAAAASAAUAAgAGAAEAAAASAAYAAgAGAAEAAAASAAcAAgAGAAEAAAASAAgAAgAGAAEAAAASAAkAAgAGAAEAAAASAAoAAgAGAAEAAAASAAsAAgAGAAEAAAASAAwAAgAGAAEAAAASAA0AAgAGAAEAAAASAA4AAgAGAAEAAAASAA8AAgAGAAEAAAASABAAAgAGAAEAAAASABEAAgAGAAEAAAASABIAAgAGAAEAAAASABMAAgAGAAEAAAASABQAAgAGAAEAAAASABUAAgAGAAEAAAASABYAAgAGAAEAAAATAP//AgAGAAEAAAATAAAAAgAGAAEAAAATAAEAAgAGAAEAAAATAAIAAgAGAAEAAAATAAMAAgAGAAEAAAATAAQAAgAGAAEAAAATAAUAAgAGAAEAAAATAAYAAgAGAAEAAAATAAcAAgAGAAEAAAATAAgAAgAGAAEAAAATAAkAAgAGAAEAAAATAAoAAgAGAAEAAAATAAsAAgAGAAEAAAATAAwAAgAGAAEAAAATAA0AAgAGAAEAAAATAA4AAgAGAAEAAAATAA8AAgAGAAEAAAATABAAAgAGAAEAAAATABEAAgAGAAEAAAATABIAAgAGAAEAAAATABMAAgAGAAEAAAATABQAAgAGAAEAAAATABUAAgAGAAEAAAATABYAAgAGAAEAAAAUAP//AgAGAAEAAAAUAAAAAgAGAAEAAAAUAAEAAgAGAAEAAAAUAAIAAgAGAAEAAAAUAAMAAgAGAAEAAAAUAAQAAgAGAAEAAAAUAAUAAgAGAAEAAAAUAAYAAgAGAAEAAAAUAAcAAgAGAAEAAAAUAAgAAgAGAAEAAAAUAAkAAgAGAAEAAAAUAAoAAgAGAAEAAAAUAAsAAgAGAAEAAAAUAAwAAgAGAAEAAAAUAA0AAgAGAAEAAAAUAA4AAgAGAAEAAAAUAA8AAgAGAAEAAAAUABAAAgAGAAEAAAAUABEAAgAGAAEAAAAUABIAAgAGAAEAAAAUABMAAgAGAAEAAAAUABQAAgAGAAEAAAAUABUAAgAGAAEAAAAUABYAAgAGAAEAAAAVAP//AgAGAAEAAAAVAAAAAgAGAAEAAAAVAAEAAgAGAAEAAAAVAAIAAgAGAAEAAAAVAAMAAgAGAAEAAAAVAAQAAgAGAAEAAAAVAAUAAgAGAAEAAAAVAAYAAgAGAAEAAAAVAAcAAgAGAAEAAAAVAAgAAgAGAAEAAAAVAAkAAgAGAAEAAAAVAAoAAgAGAAEAAAAVAAsAAgAGAAEAAAAVAAwAAgAGAAEAAAAVAA0AAgAGAAEAAAAVAA4AAgAGAAEAAAAVAA8AAgAGAAEAAAAVABAAAgAGAAEAAAAVABEAAgAGAAEAAAAVABIAAgAGAAEAAAAVABMAAgAGAAEAAAAVABQAAgAGAAEAAAAVABUAAgAGAAEAAAAVABYAAgAGAAEAAAAWAP//AgAGAAEAAAAWAAAAAgAGAAEAAAAWAAEAAgAGAAEAAAAWAAIAAgAGAAEAAAAWAAMAAgAGAAEAAAAWAAQAAgAGAAEAAAAWAAUAAgAGAAEAAAAWAAYAAgAGAAEAAAAWAAcAAgAGAAEAAAAWAAgAAgAGAAEAAAAWAAkAAgAGAAEAAAAWAAoAAgAGAAEAAAAWAAsAAgAGAAEAAAAWAAwAAgAGAAEAAAAWAA0AAgAGAAEAAAAWAA4AAgAGAAEAAAAWAA8AAgAGAAEAAAAWABAAAgAGAAEAAAAWABEAAgAGAAEAAAAWABIAAgAGAAEAAAAWABMAAgAGAAEAAAAWABQAAgAGAAEAAAAWABUAAgAGAAEAAAAWABYAAgAGAAEAAAAXAP//AgAGAAEAAAAXAAAAAgAGAAEAAAAXAAEAAgAGAAEAAAAXAAIAAgAGAAEAAAAXAAMAAgAGAAEAAAAXAAQAAgAGAAEAAAAXAAUAAgAGAAEAAAAXAAYAAgAGAAEAAAAXAAcAAgAGAAEAAAAXAAgAAgAGAAEAAAAXAAkAAgAGAAEAAAAXAAoAAgAGAAEAAAAXAAsAAgAGAAEAAAAXAAwAAgAGAAEAAAAXAA0AAgAGAAEAAAAXAA4AAgAGAAEAAAAXAA8AAgAGAAEAAAAXABAAAgAGAAEAAAAXABEAAgAGAAEAAAAXABIAAgAGAAEAAAAXABMAAgAGAAEAAAAXABQAAgAGAAEAAAAXABUAAgAGAAEAAAAXABYAAgAGAAEAAAAYAP//AgAGAAEAAAAYAAAAAgAGAAEAAAAYAAEAAgAGAAEAAAAYAAIAAgAGAAEAAAAYAAMAAgAGAAEAAAAYAAQAAgAGAAEAAAAYAAUAAgAGAAEAAAAYAAYAAgAGAAEAAAAYAAcAAgAGAAEAAAAYAAgAAgAGAAEAAAAYAAkAAgAGAAEAAAAYAAoAAgAGAAEAAAAYAAsAAgAGAAEAAAAYAAwAAgAGAAEAAAAYAA0AAgAGAAEAAAAYAA4AAgAGAAEAAAAYAA8AAgAGAAEAAAAYABAAAgAGAAEAAAAYABEAAgAGAAEAAAAYABIAAgAGAAEAAAAYABMAAgAGAAEAAAAYABQAAgAGAAEAAAAYABUAAgAGAAEAAAAYABYAAgAGAAEAAAAZAP//AgAGAAEAAAAZAAAAAgAGAAEAAAAZAAEAAgAGAAEAAAAZAAIAAgAGAAEAAAAZAAMAAgAGAAEAAAAZAAQAAgAGAAEAAAAZAAUAAgAGAAEAAAAZAAYAAgAGAAEAAAAZAAcAAgAGAAEAAAAZAAgAAgAGAAEAAAAZAAkAAgAGAAEAAAAZAAoAAgAGAAEAAAAZAAsAAgAGAAEAAAAZAAwAAgAGAAEAAAAZAA0AAgAGAAEAAAAZAA4AAgAGAAEAAAAZAA8AAgAGAAEAAAAZABAAAgAGAAEAAAAZABEAAgAGAAEAAAAZABIAAgAGAAEAAAAZABMAAgAGAAEAAAAZABQAAgAGAAEAAAAZABUAAgAGAAEAAAAZABYAAgAGAAEAAAAaAP//AgAGAAEAAAAaAAAAAgAGAAEAAAAaAAEAAgAGAAEAAAAaAAIAAgAGAAEAAAAaAAMAAgAGAAEAAAAaAAQAAgAGAAEAAAAaAAUAAgAGAAEAAAAaAAYAAgAGAAEAAAAaAAcAAgAGAAEAAAAaAAgAAgAGAAEAAAAaAAkAAgAGAAEAAAAaAAoAAgAGAAEAAAAaAAsAAgAGAAEAAAAaAAwAAgAGAAEAAAAaAA0AAgAGAAEAAAAaAA4AAgAGAAEAAAAaAA8AAgAGAAEAAAAaABAAAgAGAAEAAAAaABEAAgAGAAEAAAAaABIAAgAGAAEAAAAaABMAAgAGAAEAAAAaABQAAgAGAAEAAAAaABUAAgAGAAEAAAAaABYAAgAGAAEAAAAbAP//AgAGAAEAAAAbAAAAAgAGAAEAAAAbAAEAAgAGAAEAAAAbAAIAAgAGAAEAAAAbAAMAAgAGAAEAAAAbAAQAAgAGAAEAAAAbAAUAAgAGAAEAAAAbAAYAAgAGAAEAAAAbAAcAAgAGAAEAAAAbAAgAAgAGAAEAAAAbAAkAAgAGAAEAAAAbAAoAAgAGAAEAAAAbAAsAAgAGAAEAAAAbAAwAAgAGAAEAAAAbAA0AAgAGAAEAAAAbAA4AAgAGAAEAAAAbAA8AAgAGAAEAAAAbABAAAgAGAAEAAAAbABEAAgAGAAEAAAAbABIAAgAGAAEAAAAbABMAAgAGAAEAAAAbABQAAgAGAAEAAAAbABUAAgAGAAEAAAAbABYAAgAGAAEAAAAcAP//AgAGAAEAAAAcAAAAAgAGAAEAAAAcAAEAAgAGAAEAAAAcAAIAAgAGAAEAAAAcAAMAAgAGAAEAAAAcAAQAAgAGAAEAAAAcAAUAAgAGAAEAAAAcAAYAAgAGAAEAAAAcAAcAAgAGAAEAAAAcAAgAAgAGAAEAAAAcAAkAAgAGAAEAAAAcAAoAAgAGAAEAAAAcAAsAAgAGAAEAAAAcAAwAAgAGAAEAAAAcAA0AAgAGAAEAAAAcAA4AAgAGAAEAAAAcAA8AAgAGAAEAAAAcABAAAgAGAAEAAAAcABEAAgAGAAEAAAAcABIAAgAGAAEAAAAcABMAAgAGAAEAAAAcABQAAgAGAAEAAAAcABUAAgAGAAEAAAAcABYAAgAGAAEAAAAdAP//AgAGAAEAAAAdAAAAAgAGAAEAAAAdAAEAAgAGAAEAAAAdAAIAAgAGAAEAAAAdAAMAAgAGAAEAAAAdAAQAAgAGAAEAAAAdAAUAAgAGAAEAAAAdAAYAAgAGAAEAAAAdAAcAAgAGAAEAAAAdAAgAAgAGAAEAAAAdAAkAAgAGAAEAAAAdAAoAAgAGAAEAAAAdAAsAAgAGAAEAAAAdAAwAAgAGAAEAAAAdAA0AAgAGAAEAAAAdAA4AAgAGAAEAAAAdAA8AAgAGAAEAAAAdABAAAgAGAAEAAAAdABEAAgAGAAEAAAAdABIAAgAGAAEAAAAdABMAAgAGAAEAAAAdABQAAgAGAAEAAAAdABUAAgAGAAEAAAAdABYAAgAGAAEAAAAeAP//AgAGAAEAAAAeAAAAAgAGAAEAAAAeAAEAAgAGAAEAAAAeAAIAAgAGAAEAAAAeAAMAAgAGAAEAAAAeAAQAAgAGAAEAAAAeAAUAAgAGAAEAAAAeAAYAAgAGAAEAAAAeAAcAAgAGAAEAAAAeAAgAAgAGAAEAAAAeAAkAAgAGAAEAAAAeAAoAAgAGAAEAAAAeAAsAAgAGAAEAAAAeAAwAAgAGAAEAAAAeAA0AAgAGAAEAAAAeAA4AAgAGAAEAAAAeAA8AAgAGAAEAAAAeABAAAgAGAAEAAAAeABEAAgAGAAEAAAAeABIAAgAGAAEAAAAeABMAAgAGAAEAAAAeABQAAgAGAAEAAAAeABUAAgAGAAEAAAAeABYAAgAGAAEAAAAfAP//AgAGAAEAAAAfAAAAAgAGAAEAAAAfAAEAAgAGAAEAAAAfAAIAAgAGAAEAAAAfAAMAAgAGAAEAAAAfAAQAAgAGAAEAAAAfAAUAAgAGAAEAAAAfAAYAAgAGAAEAAAAfAAcAAgAGAAEAAAAfAAgAAgAGAAEAAAAfAAkAAgAGAAEAAAAfAAoAAgAGAAEAAAAfAAsAAgAGAAEAAAAfAAwAAgAGAAEAAAAfAA0AAgAGAAEAAAAfAA4AAgAGAAEAAAAfAA8AAgAGAAEAAAAfABAAAgAGAAEAAAAfABEAAgAGAAEAAAAfABIAAgAGAAEAAAAfABMAAgAGAAEAAAAfABQAAgAGAAEAAAAfABUAAgAGAAEAAAAfABYAAgAGAAEAAAAgAP//AgAGAAEAAAAgAAAAAgAGAAEAAAAgAAEAAgAGAAEAAAAgAAIAAgAGAAEAAAAgAAMAAgAGAAEAAAAgAAQAAgAGAAEAAAAgAAUAAgAGAAEAAAAgAAYAAgAGAAEAAAAgAAcAAgAGAAEAAAAgAAgAAgAGAAEAAAAgAAkAAgAGAAEAAAAgAAoAAgAGAAEAAAAgAAsAAgAGAAEAAAAgAAwAAgAGAAEAAAAgAA0AAgAGAAEAAAAgAA4AAgAGAAEAAAAgAA8AAgAGAAEAAAAgABAAAgAGAAEAAAAgABEAAgAGAAEAAAAgABIAAgAGAAEAAAAgABMAAgAGAAEAAAAgABQAAgAGAAEAAAAgABUAAgAGAAEAAAAgABYAAgAGAAEAAAAhAP//AgAGAAEAAAAhAAAAAgAGAAEAAAAhAAEAAgAGAAEAAAAhAAIAAgAGAAEAAAAhAAMAAgAGAAEAAAAhAAQAAgAGAAEAAAAhAAUAAgAGAAEAAAAhAAYAAgAGAAEAAAAhAAcAAgAGAAEAAAAhAAgAAgAGAAEAAAAhAAkAAgAGAAEAAAAhAAoAAgAGAAEAAAAhAAsAAgAGAAEAAAAhAAwAAgAGAAEAAAAhAA0AAgAGAAEAAAAhAA4AAgAGAAEAAAAhAA8AAgAGAAEAAAAhABAAAgAGAAEAAAAhABEAAgAGAAEAAAAhABIAAgAGAAEAAAAhABMAAgAGAAEAAAAhABQAAgAGAAEAAAAhABUAAgAGAAEAAAAhABYAAgAGAAEAAAAiAP//AgAGAAEAAAAiAAAAAgAGAAEAAAAiAAEAAgAGAAEAAAAiAAIAAgAGAAEAAAAiAAMAAgAGAAEAAAAiAAQAAgAGAAEAAAAiAAUAAgAGAAEAAAAiAAYAAgAGAAEAAAAiAAcAAgAGAAEAAAAiAAgAAgAGAAEAAAAiAAkAAgAGAAEAAAAiAAoAAgAGAAEAAAAiAAsAAgAGAAEAAAAiAAwAAgAGAAEAAAAiAA0AAgAGAAEAAAAiAA4AAgAGAAEAAAAiAA8AAgAGAAEAAAAiABAAAgAGAAEAAAAiABEAAgAGAAEAAAAiABIAAgAGAAEAAAAiABMAAgAGAAEAAAAiABQAAgAGAAEAAAAiABUAAgAGAAEAAAAiABYAAgAGAAEAAAAjAP//AgAGAAEAAAAjAAAAAgAGAAEAAAAjAAEAAgAGAAEAAAAjAAIAAgAGAAEAAAAjAAMAAgAGAAEAAAAjAAQAAgAGAAEAAAAjAAUAAgAGAAEAAAAjAAYAAgAGAAEAAAAjAAcAAgAGAAEAAAAjAAgAAgAGAAEAAAAjAAkAAgAGAAEAAAAjAAoAAgAGAAEAAAAjAAsAAgAGAAEAAAAjAAwAAgAGAAEAAAAjAA0AAgAGAAEAAAAjAA4AAgAGAAEAAAAjAA8AAgAGAAEAAAAjABAAAgAGAAEAAAAjABEAAgAGAAEAAAAjABIAAgAGAAEAAAAjABMAAgAGAAEAAAAjABQAAgAGAAEAAAAjABUAAgAGAAEAAAAjABYAAgAGAAEAAAAkAP//AgAGAAEAAAAkAAAAAgAGAAEAAAAkAAEAAgAGAAEAAAAkAAIAAgAGAAEAAAAkAAMAAgAGAAEAAAAkAAQAAgAGAAEAAAAkAAUAAgAGAAEAAAAkAAYAAgAGAAEAAAAkAAcAAgAGAAEAAAAkAAgAAgAGAAEAAAAkAAkAAgAGAAEAAAAkAAoAAgAGAAEAAAAkAAsAAgAGAAEAAAAkAAwAAgAGAAEAAAAkAA0AAgAGAAEAAAAkAA4AAgAGAAEAAAAkAA8AAgAGAAEAAAAkABAAAgAGAAEAAAAkABEAAgAGAAEAAAAkABIAAgAGAAEAAAAkABMAAgAGAAEAAAAkABQAAgAGAAEAAAAkABUAAgAGAAEAAAAkABYAAgAGAAEAAAAlAP//AgAGAAEAAAAlAAAAAgAGAAEAAAAlAAEAAgAGAAEAAAAlAAIAAgAGAAEAAAAlAAMAAgAGAAEAAAAlAAQAAgAGAAEAAAAlAAUAAgAGAAEAAAAlAAYAAgAGAAEAAAAlAAcAAgAGAAEAAAAlAAgAAgAGAAEAAAAlAAkAAgAGAAEAAAAlAAoAAgAGAAEAAAAlAAsAAgAGAAEAAAAlAAwAAgAGAAEAAAAlAA0AAgAGAAEAAAAlAA4AAgAGAAEAAAAlAA8AAgAGAAEAAAAlABAAAgAGAAEAAAAlABEAAgAGAAEAAAAlABIAAgAGAAEAAAAlABMAAgAGAAEAAAAlABQAAgAGAAEAAAAlABUAAgAGAAEAAAAlABYAAgAGAAEAAAAmAP//AgAGAAEAAAAmAAAAAgAGAAEAAAAmAAEAAgAGAAEAAAAmAAIAAgAGAAEAAAAmAAMAAgAGAAEAAAAmAAQAAgAGAAEAAAAmAAUAAgAGAAEAAAAmAAYAAgAGAAEAAAAmAAcAAgAGAAEAAAAmAAgAAgAGAAEAAAAmAAkAAgAGAAEAAAAmAAoAAgAGAAEAAAAmAAsAAgAGAAEAAAAmAAwAAgAGAAEAAAAmAA0AAgAGAAEAAAAmAA4AAgAGAAEAAAAmAA8AAgAGAAEAAAAmABAAAgAGAAEAAAAmABEAAgAGAAEAAAAmABIAAgAGAAEAAAAmABMAAgAGAAEAAAAmABQAAgAGAAEAAAAmABUAAgAGAAEAAAAmABYAAgAGAAEAAAAnAP//AgAGAAEAAAAnAAAAAgAGAAEAAAAnAAEAAgAGAAEAAAAnAAIAAgAGAAEAAAAnAAMAAgAGAAEAAAAnAAQAAgAGAAEAAAAnAAUAAgAGAAEAAAAnAAYAAgAGAAEAAAAnAAcAAgAGAAEAAAAnAAgAAgAGAAEAAAAnAAkAAgAGAAEAAAAnAAoAAgAGAAEAAAAnAAsAAgAGAAEAAAAnAAwAAgAGAAEAAAAnAA0AAgAGAAEAAAAnAA4AAgAGAAEAAAAnAA8AAgAGAAEAAAAnABAAAgAGAAEAAAAnABEAAgAGAAEAAAAnABIAAgAGAAEAAAAnABMAAgAGAAEAAAAnABQAAgAGAAEAAAAnABUAAgAGAAEAAAAnABYAAgAGAAEAAAAoAP//AgAGAAEAAAAoAAAAAgAGAAEAAAAoAAEAAgAGAAEAAAAoAAIAAgAGAAEAAAAoAAMAAgAGAAEAAAAoAAQAAgAGAAEAAAAoAAUAAgAGAAEAAAAoAAYAAgAGAAEAAAAoAAcAAgAGAAEAAAAoAAgAAgAGAAEAAAAoAAkAAgAGAAEAAAAoAAoAAgAGAAEAAAAoAAsAAgAGAAEAAAAoAAwAAgAGAAEAAAAoAA0AAgAGAAEAAAAoAA4AAgAGAAEAAAAoAA8AAgAGAAEAAAAoABAAAgAGAAEAAAAoABEAAgAGAAEAAAAoABIAAgAGAAEAAAAoABMAAgAGAAEAAAAoABQAAgAGAAEAAAAoABUAAgAGAAEAAAAoABYAAgAGAAEAAAApAP//AgAGAAEAAAApAAAAAgAGAAEAAAApAAEAAgAGAAEAAAApAAIAAgAGAAEAAAApAAMAAgAGAAEAAAApAAQAAgAGAAEAAAApAAUAAgAGAAEAAAApAAYAAgAGAAEAAAApAAcAAgAGAAEAAAApAAgAAgAGAAEAAAApAAkAAgAGAAEAAAApAAoAAgAGAAEAAAApAAsAAgAGAAEAAAApAAwAAgAGAAEAAAApAA0AAgAGAAEAAAApAA4AAgAGAAEAAAApAA8AAgAGAAEAAAApABAAAgAGAAEAAAApABEAAgAGAAEAAAApABIAAgAGAAEAAAApABMAAgAGAAEAAAApABQAAgAGAAEAAAApABUAAgAGAAEAAAApABYAAgAGAAEAAAA=")
tile_set = ExtResource("2_3jufc")

[node name="Vignette" parent="." instance=ExtResource("3_63nyo")]
layer = 3

[node name="TimeLine" type="ColorRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(5, 60)
offset_left = 5.0
offset_top = 105.0
offset_right = 636.0
offset_bottom = 165.0
color = Color(0.247059, 0.14902, 0.192157, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 20

[node name="NoModifiersAvailable" type="Label" parent="MarginContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_type_variation = &"TitleLabel"
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 19
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 48
text = "Modifiers"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ModifiersContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 71.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ModifiersContainer"]
layout_mode = 2
theme = ExtResource("4_ijeid")
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ModifiersContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 4

[node name="MapModifierSelectGridContainer" type="GridContainer" parent="ModifiersContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 12
columns = 32

[node name="ModiferCard2" parent="ModifiersContainer/ScrollContainer/MarginContainer/MapModifierSelectGridContainer" instance=ExtResource("6_otpye")]
material = SubResource("ShaderMaterial_h3mnt")
layout_mode = 2

[node name="ModiferCard" parent="ModifiersContainer/ScrollContainer/MarginContainer/MapModifierSelectGridContainer" instance=ExtResource("6_otpye")]
material = SubResource("ShaderMaterial_hhhj0")
layout_mode = 2

[node name="ModiferCard3" parent="ModifiersContainer/ScrollContainer/MarginContainer/MapModifierSelectGridContainer" instance=ExtResource("6_otpye")]
material = SubResource("ShaderMaterial_6a7dy")
layout_mode = 2

[node name="NoModifiersAvailable" type="Label" parent="ModifiersContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_type_variation = &"TitleLabel"
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 18
text = "NO_MODIFIERS_AVAILABLE_LABEL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = 63.0
offset_right = 322.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BackButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("8_b8h6c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 28)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "BACK_BUTTON"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CurrentMapVboxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="ModifierTitleLabel" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/CurrentMapVboxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 21
horizontal_alignment = 1
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/PanelContainer/CurrentMapVboxContainer"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
mouse_filter = 1
color = Color(0.14902, 0.168627, 0.266667, 1)

[node name="ModifierDescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/CurrentMapVboxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("8_b8h6c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 28)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "CONTINUE_BUTTON"
